# DenseMixer

./: LICENSE  README.md  blog.md  pyproject.toml  setup.py
densemixer/: __init__.py  commands.py  logging_utils.py  patching.py
densemixer/models/: olmoe_custom.py  qwen2_moe_custom.py  qwen3_moe_custom.py
efficiency_analysis/: flops.sh  flops_compute.py  qwen3_config.json  qwen3_densemixer_config.json
experiments/: README.md
experiments/llama-factory/: README.md  installation.sh
experiments/llama-factory/LLaMA-Factory/: 1  installation.sh  merge.sh  requirements.txt
experiments/llama-factory/LLaMA-Factory/data/: dataset_info.json
experiments/llama-factory/LLaMA-Factory/run/: upload.sh
experiments/llama-factory/LLaMA-Factory/scripts/: upload_full.out  upload_hf.py  upload_hf_full.sh  upload_hf_fullqwen1.5.sh  upload_hf_ste.sh  upload_hf_ste1.sh  upload_hf_steqwen1.5.sh  upload_ste.out
experiments/llama-factory/LLaMA-Factory/slurm_scripts/: upload_ckpt.sh
experiments/llama-factory/esft_experts_gen/experts/: generate_expert_config.sh
experiments/llama-factory/eval/: README.md  benchmarks.py  eval_esft.sh  lm_eval_code.sh  run_eval_gsm.py  utils.py
experiments/open-instruct/: README.md
experiments/open-instruct/esft_experts_gen/experts/: generate_expert_config.py  get_expert_scores.py  get_expert_scores.sh  get_expert_scores_qwen.py  get_expert_scores_qwen.sh
experiments/open-instruct/eval/: README.md  eval_esft.py  run_eval_gsm.sh
experiments/open-instruct/open-instruct/: .gitignore  init_env.sh  pyproject.toml  requirements.txt
(+311 files in other folders)
